--- a/uknown_s5lwn7.bot_scam_do_not_run.json
+++ b/uknown_s5lwn7.bot_scam_do_not_run.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_s5lwn7.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_s5lwn7.bot_scam_do_not_run",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 1571525963874,
+	"last_scraped": 1571534658875,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
 		}
 	],
-	"updt": 1571525630128,
-	"edit": 1,
-	"scrape_ct": 16,
-	"next_scrape": 1571526023874,
+	"updt": 1571526079301,
+	"edit": 2,
+	"scrape_ct": 13,
+	"next_scrape": 1571534718875,
 	"category": "clicker",
-	"last_update": 1571525963874,
+	"last_update": 1571534658875,
 	"output": [
 		{
 			"args": {},
-			"calls": 3915,
+			"calls": 12418,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ployee",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 13244,
+			"calls": 15948,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ployee",
@@ -128,6 +128,11 @@
 				"es. Emp",
 				"ComCODE"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
