--- a/unknown_6mixmg.cortex.json
+++ b/unknown_6mixmg.cortex.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_6mixmg.cortex",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_6mixmg.cortex",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 1571526034733,
+	"last_scraped": 1571534766357,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
 		}
 	],
-	"updt": 1571525630128,
-	"edit": 1,
-	"scrape_ct": 18,
-	"next_scrape": 1571526094733,
+	"updt": 1571526079301,
+	"edit": 2,
+	"scrape_ct": 13,
+	"next_scrape": 1571534826357,
 	"category": "clicker",
-	"last_update": 1571526034733,
+	"last_update": 1571534766357,
 	"output": [
 		{
 			"args": {},
-			"calls": 4048,
+			"calls": 14568,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"in or",
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 3704,
+			"calls": 7951,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"in or",
@@ -82,7 +82,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 772,
+			"calls": 1711,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"in or",
