--- a/uknown_qp2h9f.exapunks.json
+++ b/uknown_qp2h9f.exapunks.json
@@ -6,21 +6,21 @@
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 1571527812815,
+	"last_scraped": 1571535752592,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
 		}
 	],
-	"scrape_ct": 20,
-	"next_scrape": 1571527872815,
+	"scrape_ct": 19,
+	"next_scrape": 1571535812592,
 	"category": "dice_roller",
-	"last_update": 1571527812815,
+	"last_update": 1571535752592,
 	"output": [
 		{
 			"args": {},
-			"calls": 5545,
+			"calls": 9508,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"eak. ",
@@ -57,5 +57,7 @@
 				"ay. You "
 			]
 		}
-	]
+	],
+	"updt": 1571527882868,
+	"edit": 1
 }
