--- a/uknown_vnbzxc.breach.json
+++ b/uknown_vnbzxc.breach.json
@@ -6,21 +6,21 @@
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 1571527832301,
+	"last_scraped": 1571535773467,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
 		}
 	],
-	"scrape_ct": 19,
-	"next_scrape": 1571527892301,
+	"scrape_ct": 18,
+	"next_scrape": 1571535833467,
 	"category": "dice_roller",
-	"last_update": 1571527832301,
+	"last_update": 1571535773467,
 	"output": [
 		{
 			"args": {},
-			"calls": 9870,
+			"calls": 13878,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"r cre",
@@ -60,5 +60,7 @@
 				" she kno"
 			]
 		}
-	]
+	],
+	"updt": 1571527882868,
+	"edit": 1
 }
