--- a/unknown_opfa3d.fuckthisshitimout.json
+++ b/unknown_opfa3d.fuckthisshitimout.json
@@ -6,21 +6,21 @@
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 1571527882218,
+	"last_scraped": 1571535822833,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
 		}
 	],
-	"scrape_ct": 20,
-	"next_scrape": 1571527942218,
+	"scrape_ct": 19,
+	"next_scrape": 1571535882833,
 	"category": "dice_roller",
-	"last_update": 1571527882218,
+	"last_update": 1571535822833,
 	"output": [
 		{
 			"args": {},
-			"calls": 6779,
+			"calls": 12074,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"almost",
@@ -60,5 +60,7 @@
 				"\\nAD0321D"
 			]
 		}
-	]
+	],
+	"updt": 1571528334511,
+	"edit": 1
 }
