--- a/unknown_m0d1ti.tickets.json
+++ b/unknown_m0d1ti.tickets.json
@@ -6,19 +6,19 @@
 	"sector": "HJG_6981",
 	"sec_level": 4,
 	"date_added": 1571528416362,
-	"last_scraped": 1571528748034,
+	"last_scraped": 1571536170006,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571528416362
 		}
 	],
-	"updt": 1571528559010,
-	"edit": 1,
-	"scrape_ct": 20,
-	"next_scrape": 1571528808034,
+	"updt": 1571528784347,
+	"edit": 2,
+	"scrape_ct": 19,
+	"next_scrape": 1571536230006,
 	"category": "plant_sim",
-	"last_update": 1571528748034,
+	"last_update": 1571536170006,
 	"output": [
 		{
 			"args": {},
@@ -48,6 +48,21 @@
 						" 1 downt"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 461,
+			"base": "c:\"cgog2n\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Á\n                 ",
+			"fragments": [
+				"incre",
+				"wntime ",
+				"ct incr",
+				"xpect in",
+				"or the r",
+				"e | BODY",
+				" BODY hi",
+				" 1 downt"
 			]
 		}
 	],
