--- a/unknown_wekorc.net.json
+++ b/unknown_wekorc.net.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_wekorc.net",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_wekorc.net",
 	"sector": "HJG_6981",
 	"sec_level": 4,
 	"date_added": 1571528416362,
-	"last_scraped": 1571528776736,
+	"last_scraped": 1571536228823,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571528416362
 		}
 	],
-	"updt": 1571528784347,
-	"edit": 2,
-	"scrape_ct": 18,
-	"next_scrape": 1571528836736,
+	"updt": 1571536225611,
+	"edit": 4,
+	"scrape_ct": 14,
+	"next_scrape": 1571536288823,
 	"category": "clicker",
-	"last_update": 1571528776736,
+	"last_update": 1571536228823,
 	"output": [
 		{
 			"args": {},
-			"calls": 3345,
+			"calls": 12046,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				" Iona,",
@@ -63,7 +63,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 7337,
+			"calls": 14454,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				" Iona,",
@@ -139,6 +139,40 @@
 						"'t think"
 					]
 				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 998,
+			"base": "`LCLIC   ECURED`",
+			"fragments": [
+				"K Iona,",
+				" Iona,S",
+				"r? ## IS",
+				"l do anS",
+				"Kr? ## I",
+				"Kn shes ",
+				"Kl do an",
+				"K  Iona,",
+				"Iona,K S",
+				" Iona, S",
+				"s that mS",
+				"r? ## I S",
+				"n shes  S",
+				"l do an S",
+				"an shes S",
+				"Ks that m",
+				"Kan shes ",
+				"K. ## doe",
+				"K't think",
+				"K r? ## I",
+				"K n shes ",
+				"K l do an",
+				"K S Iona,",
+				". ## doeS",
+				"'t thinkS"
 			]
 		}
 	],
