--- a/uknown_45y6u8.sysload.json
+++ b/uknown_45y6u8.sysload.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_45y6u8.sysload",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_45y6u8.sysload",
 	"sector": "NGC_5505",
 	"sec_level": 4,
 	"date_added": 1571530516796,
-	"last_scraped": 1571531237935,
+	"last_scraped": 1571537606712,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571530516796
 		}
 	],
-	"updt": 1571530814056,
-	"edit": 1,
-	"scrape_ct": 18,
-	"next_scrape": 1571531297935,
+	"updt": 1571531263969,
+	"edit": 2,
+	"scrape_ct": 14,
+	"next_scrape": 1571537666712,
 	"category": "clicker",
-	"last_update": 1571531237935,
+	"last_update": 1571537606712,
 	"output": [
 		{
 			"args": {},
-			"calls": 6868,
+			"calls": 16060,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"disca",
@@ -58,7 +58,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 3993,
+			"calls": 13385,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"disca",
@@ -94,7 +94,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 1015,
+			"calls": 1488,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"disca",
