--- a/uknown_0o896a.big_red_button.json
+++ b/uknown_0o896a.big_red_button.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_0o896a.big_red_button",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_0o896a.big_red_button",
 	"sector": "K_8071",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569202795368
+		},
+		{
+			"type": "died",
+			"when": 1571539124964
 		}
 	],
 	"scrape_ct": 13,
@@ -70,6 +74,6 @@
 			]
 		}
 	],
-	"updt": 1570786567016,
-	"edit": 14
+	"updt": 1570794465210,
+	"edit": 15
 }
