--- a/uknown_0o896a.payout.json
+++ b/uknown_0o896a.payout.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_0o896a.payout",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "uknown_0o896a.payout",
 	"sector": "NGC_4554",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562894671732
+		},
+		{
+			"type": "died",
+			"when": 1571539160235
 		}
 	],
 	"scrape_ct": 20,
@@ -191,8 +195,8 @@
 			]
 		}
 	],
-	"updt": 1570601904054,
-	"edit": 7,
+	"updt": 1570669767450,
+	"edit": 8,
 	"identified": [
 		{
 			"document": "NOT FOUND",
