--- a/unknown_0blsy8.t3_clean.json
+++ b/unknown_0blsy8.t3_clean.json
@@ -6,23 +6,23 @@
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 1571534715550,
+	"last_scraped": 1571539490347,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
 		}
 	],
-	"updt": 1571526079301,
-	"edit": 2,
-	"scrape_ct": 13,
-	"next_scrape": 1571534775550,
+	"updt": 1571535099298,
+	"edit": 3,
+	"scrape_ct": 9,
+	"next_scrape": 1571539550347,
 	"category": "clicker",
-	"last_update": 1571534715550,
+	"last_update": 1571539490347,
 	"output": [
 		{
 			"args": {},
-			"calls": 8920,
+			"calls": 18883,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"other",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 15306,
+			"calls": 24495,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"other",
@@ -112,6 +112,35 @@
 						"s next?\\n"
 					]
 				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 941,
+			"base": "`LCLIC  SECURED`",
+			"fragments": [
+				"otherK",
+				"Kother",
+				"s nextK",
+				"otherCK",
+				"Ks next",
+				"K other",
+				"Kwise.\\n",
+				"Kur turn",
+				"Kr turn ",
+				"K9B On y",
+				"K s next",
+				"K Sother",
+				"s next?\\n",
+				"Kn your t",
+				"Klity.\\n2",
+				"K wise.\\n",
+				"K ur turn",
+				"K r turn ",
+				"K Ss next",
+				"K 9B On y"
 			]
 		}
 	],
