--- a/uknown_8s1azb.hax_members.json
+++ b/uknown_8s1azb.hax_members.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_8s1azb.hax_members",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_8s1azb.hax_members",
 	"sector": "NGC_9087",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1571533379248,
+	"last_scraped": 1571538670621,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1571531941567,
-	"edit": 1,
-	"scrape_ct": 16,
-	"next_scrape": 1571533439248,
+	"updt": 1571533518101,
+	"edit": 2,
+	"scrape_ct": 12,
+	"next_scrape": 1571538730621,
 	"category": "clicker",
-	"last_update": 1571533379248,
+	"last_update": 1571538670621,
 	"output": [
 		{
 			"args": {},
-			"calls": 12448,
+			"calls": 20172,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"centu",
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 7255,
+			"calls": 12800,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"centu",
@@ -82,7 +82,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 1142,
+			"calls": 1852,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"centu",
