--- a/abandoned_hdaenx.k3y_cull.json
+++ b/abandoned_hdaenx.k3y_cull.json
@@ -1,28 +1,28 @@
 {
 	"_id": "abandoned_hdaenx.k3y_cull",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "abandoned_hdaenx.k3y_cull",
 	"sector": "HJG_6981",
 	"sec_level": 4,
 	"date_added": 1571528154032,
-	"last_scraped": 1571536056563,
+	"last_scraped": 1571540679541,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571528154032
 		}
 	],
-	"updt": 1571528559010,
-	"edit": 2,
-	"scrape_ct": 13,
-	"next_scrape": 1571536116563,
+	"updt": 1571536225611,
+	"edit": 3,
+	"scrape_ct": 10,
+	"next_scrape": 1571540739541,
 	"category": "clicker",
-	"last_update": 1571536056563,
+	"last_update": 1571540679541,
 	"output": [
 		{
 			"args": {},
-			"calls": 16728,
+			"calls": 23355,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"0X2BC",
@@ -50,7 +50,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 10082,
+			"calls": 16184,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"0X2BC",
@@ -114,6 +114,11 @@
 				"ECT0XF22",
 				"C7D17D\\n"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
