--- a/uknown_l9ss3g.logs.json
+++ b/uknown_l9ss3g.logs.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_l9ss3g.logs",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_l9ss3g.logs",
 	"sector": "HJG_6981",
 	"sec_level": 4,
 	"date_added": 1571528687089,
-	"last_scraped": 1571536367776,
+	"last_scraped": 1571540899343,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571528687089
 		}
 	],
-	"updt": 1571529237459,
-	"edit": 2,
-	"scrape_ct": 17,
-	"next_scrape": 1571536427776,
+	"updt": 1571536677989,
+	"edit": 3,
+	"scrape_ct": 14,
+	"next_scrape": 1571540959343,
 	"category": "plant_sim",
-	"last_update": 1571536367776,
+	"last_update": 1571540899343,
 	"output": [
 		{
 			"args": {},
-			"calls": 2014,
+			"calls": 3464,
 			"base": "c:\"kerlth\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				",\"hea",
