--- a/uknown_en4eip.me.json
+++ b/uknown_en4eip.me.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_en4eip.me",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_en4eip.me",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 1571536719893,
+	"last_scraped": 1571541229655,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
 		}
 	],
-	"updt": 1571529913388,
-	"edit": 3,
-	"scrape_ct": 14,
-	"next_scrape": 1571536779893,
+	"updt": 1571536903736,
+	"edit": 4,
+	"scrape_ct": 10,
+	"next_scrape": 1571541289655,
 	"category": "clicker",
-	"last_update": 1571536719893,
+	"last_update": 1571541229655,
 	"output": [
 		{
 			"args": {},
-			"calls": 10126,
+			"calls": 20833,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ologi",
@@ -95,7 +95,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 14301,
+			"calls": 20329,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ologi",
@@ -288,6 +288,11 @@
 			"frags": [
 				"ence of "
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
