--- a/unknown_5umh34.bcd.json
+++ b/unknown_5umh34.bcd.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_5umh34.bcd",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_5umh34.bcd",
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1571538620229,
+	"last_scraped": 1571542555756,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1571533518101,
-	"edit": 2,
-	"scrape_ct": 12,
-	"next_scrape": 1571538680229,
+	"updt": 1571538930052,
+	"edit": 3,
+	"scrape_ct": 8,
+	"next_scrape": 1571542615756,
 	"category": "clicker",
-	"last_update": 1571538620229,
+	"last_update": 1571542555756,
 	"output": [
 		{
 			"args": {},
-			"calls": 25965,
+			"calls": 33948,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ay. i",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 13882,
+			"calls": 25769,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ay. i",
@@ -128,6 +128,11 @@
 				"ok. ## o",
 				"? ## It'"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
