--- a/uknown_0o896a.payout.json
+++ b/uknown_0o896a.payout.json
@@ -49,12 +49,21 @@
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
 						"cker'",
-						"pile\\n",
-						"\\n20F5",
+						"20F3 ",
+						" along",
+						"ong wit",
+						"em\\n20F",
+						"\\n20F2 ",
+						"20F2 in",
+						"pile\\n20",
+						"le\\n20F4",
 						"cards pl",
+						"all\\n20F",
 						"3 discar",
 						"0F4 alon",
-						" in the "
+						" in the ",
+						"ll\\n20F5 ",
+						"er's\\n20F"
 					]
 				}
 			]
@@ -138,35 +147,73 @@
 				{
 					"document": "NOT FOUND",
 					"frags": [
+						"s\\n20F4",
+						"\\n20F22",
 						"4s\\n20F",
-						"2\\n20F2",
+						"4e\\n20F",
+						"4\\n20F2",
+						"2G the ",
 						" along4",
+						" along2",
+						"s\\n20F 4",
+						"em\\n20F4",
+						"e\\n20F 4",
 						"\\n20F2 2",
 						"4ong wit",
+						"4G\\n20F2",
 						"4G along",
+						"2em\\n20F",
+						"2\\n20F2 ",
+						"2Grds pl",
+						"220F2 in",
+						"20F3 N 4",
+						"20F3 N 2",
+						"20F2 in2",
+						" the N 4",
+						" along 4",
+						"rds plN¤2",
 						"pile\\n204",
+						"pile\\n202",
+						"ong wit 2",
 						"le\\n20F42",
+						"em\\n20F 4",
+						"all\\n20F4",
 						"\\n20F2N 2",
 						"\\n20F2  4",
 						"\\n20F2  2",
 						"4Gem\\n20F",
+						"4G20F2 in",
+						"2¢ in the",
+						"2pile\\n20",
 						"2le\\n20F4",
 						"2GC\\n20F2",
+						" alongN 4",
+						"le\\n20F4 2",
 						"er's\\n20F2",
+						"em\\n20FN 4",
 						"em\\n20FN 2",
+						"all\\n20F 4",
+						"\\n20F2 N 2",
 						"4er's\\n20F",
+						"4Gle\\n20F4",
+						"4GCem\\n20F",
 						"2er's\\n20F",
 						"2Gpile\\n20",
+						"20F2 inN 2",
+						"pile\\n20N 2",
+						"ll\\n20F5  4",
+						"le\\n20F4N 4",
+						"all\\n20FN 4",
 						"4Gll\\n20F5 ",
+						"4GCpile\\n20",
 						"4GCle\\n20F4",
+						"2Gll\\n20F5 ",
+						"2GCall\\n20F",
+						"ll\\n20F5 N 4",
+						"er's\\n20FN 4",
 						"er's\\n20FN 2",
-						"4GCll\\n20F5 "
-					]
-				},
-				{
-					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
-					"frags": [
-						"rds pl"
+						"4GCll\\n20F5 ",
+						"4GCer's\\n20F"
 					]
 				}
 			]
@@ -192,50 +239,124 @@
 				"all\\n20F",
 				"ll\\n20F5 ",
 				"er's\\n20F"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"20F3 ",
+						" the ",
+						"rds pl",
+						" along",
+						"ong wit",
+						"em\\n20F",
+						"\\n20F2 ",
+						"20F2 in",
+						" in the",
+						"pile\\n20",
+						"le\\n20F4",
+						"all\\n20F",
+						"ll\\n20F5 ",
+						"er's\\n20F"
+					]
+				}
 			]
 		}
 	],
-	"updt": 1570669767450,
-	"edit": 8,
+	"updt": 1571539382055,
+	"edit": 9,
 	"identified": [
 		{
 			"document": "NOT FOUND",
 			"frags": [
+				"s\\n20F4",
+				"\\n20F22",
 				"4s\\n20F",
-				"2\\n20F2",
+				"4e\\n20F",
+				"4\\n20F2",
+				"2G the ",
 				" along4",
+				" along2",
+				"s\\n20F 4",
+				"em\\n20F4",
+				"e\\n20F 4",
 				"\\n20F2 2",
 				"4ong wit",
+				"4G\\n20F2",
 				"4G along",
+				"2em\\n20F",
+				"2\\n20F2 ",
+				"2Grds pl",
+				"220F2 in",
+				"20F3 N 4",
+				"20F3 N 2",
+				"20F2 in2",
+				" the N 4",
+				" along 4",
+				"rds plN¤2",
 				"pile\\n204",
+				"pile\\n202",
+				"ong wit 2",
 				"le\\n20F42",
+				"em\\n20F 4",
+				"all\\n20F4",
 				"\\n20F2N 2",
 				"\\n20F2  4",
 				"\\n20F2  2",
 				"4Gem\\n20F",
+				"4G20F2 in",
+				"2¢ in the",
+				"2pile\\n20",
 				"2le\\n20F4",
 				"2GC\\n20F2",
+				" alongN 4",
+				"le\\n20F4 2",
 				"er's\\n20F2",
+				"em\\n20FN 4",
 				"em\\n20FN 2",
+				"all\\n20F 4",
+				"\\n20F2 N 2",
 				"4er's\\n20F",
+				"4Gle\\n20F4",
+				"4GCem\\n20F",
 				"2er's\\n20F",
 				"2Gpile\\n20",
+				"20F2 inN 2",
+				"pile\\n20N 2",
+				"ll\\n20F5  4",
+				"le\\n20F4N 4",
+				"all\\n20FN 4",
 				"4Gll\\n20F5 ",
+				"4GCpile\\n20",
 				"4GCle\\n20F4",
+				"2Gll\\n20F5 ",
+				"2GCall\\n20F",
+				"ll\\n20F5 N 4",
+				"er's\\n20FN 4",
 				"er's\\n20FN 2",
-				"4GCll\\n20F5 "
+				"4GCll\\n20F5 ",
+				"4GCer's\\n20F"
 			]
 		},
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
 				"cker'",
-				"pile\\n",
-				"\\n20F5",
+				"20F3 ",
+				" along",
+				"ong wit",
+				"em\\n20F",
+				"\\n20F2 ",
+				"20F2 in",
+				"pile\\n20",
+				"le\\n20F4",
 				"cards pl",
+				"all\\n20F",
 				"3 discar",
 				"0F4 alon",
-				" in the "
+				" in the ",
+				"ll\\n20F5 ",
+				"er's\\n20F"
 			]
 		}
 	],
