--- a/uknown_qp2h9f.exapunks.json
+++ b/uknown_qp2h9f.exapunks.json
@@ -1,26 +1,26 @@
 {
 	"_id": "uknown_qp2h9f.exapunks",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_qp2h9f.exapunks",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 1571540316803,
+	"last_scraped": 1571543914932,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
 		}
 	],
-	"scrape_ct": 17,
-	"next_scrape": 1571540376803,
+	"scrape_ct": 13,
+	"next_scrape": 1571543974932,
 	"category": "dice_roller",
-	"last_update": 1571540316803,
+	"last_update": 1571543914932,
 	"output": [
 		{
 			"args": {},
-			"calls": 19078,
+			"calls": 32279,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"eak. ",
@@ -58,6 +58,6 @@
 			]
 		}
 	],
-	"updt": 1571536001408,
-	"edit": 2
+	"updt": 1571540733064,
+	"edit": 3
 }
