--- a/unknown_0blsy8.t3_clean.json
+++ b/unknown_0blsy8.t3_clean.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_0blsy8.t3_clean",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_0blsy8.t3_clean",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 1571546526640,
+	"last_scraped": 1571549743260,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
 		}
 	],
-	"updt": 1571543893127,
-	"edit": 5,
-	"scrape_ct": 1,
-	"next_scrape": 1571546586640,
+	"updt": 1571546600816,
+	"edit": 6,
+	"next_scrape": 1571595613049,
 	"category": "clicker",
-	"last_update": 1571546526640,
+	"last_update": 1571549743260,
 	"output": [
 		{
 			"args": {},
-			"calls": 31557,
+			"calls": 38968,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"other",
@@ -54,7 +53,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 36269,
+			"calls": 40128,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"other",
@@ -86,7 +85,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 4214,
+			"calls": 5340,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"other",
