--- a/unknown_ao5a79._.json
+++ b/unknown_ao5a79._.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_ao5a79._",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_ao5a79._",
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524437153,
-	"last_scraped": 1571549291951,
+	"last_scraped": 1571552178886,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524437153
 		}
 	],
-	"updt": 1571546149841,
-	"edit": 6,
-	"scrape_ct": 12,
-	"next_scrape": 1571549351951,
+	"updt": 1571549308691,
+	"edit": 7,
+	"scrape_ct": 10,
+	"next_scrape": 1571552238886,
 	"category": "coin_flipper",
-	"last_update": 1571549291951,
+	"last_update": 1571552178886,
 	"output": [
 		{
 			"args": {},
-			"calls": 46108,
+			"calls": 52039,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" orig",
