--- a/uknown_7w7mc1.moon.json
+++ b/uknown_7w7mc1.moon.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_7w7mc1.moon",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_7w7mc1.moon",
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524197262,
-	"last_scraped": 1571556870865,
+	"last_scraped": 1571559402898,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524197262
 		}
 	],
-	"scrape_ct": 3,
-	"next_scrape": 1571556930865,
+	"next_scrape": 1571603708070,
 	"category": "plant_sim",
-	"last_update": 1571556870865,
+	"last_update": 1571559402898,
 	"output": [
 		{
 			"args": {},
-			"calls": 9397,
+			"calls": 11179,
 			"base": "c:\"o7t96o\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"_SECT",
@@ -54,8 +53,8 @@
 			]
 		}
 	],
-	"updt": 1571554719635,
-	"edit": 9,
+	"updt": 1571556976414,
+	"edit": 10,
 	"identified": [
 		{
 			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
