--- a/uknown_luqvkx.t1_scrape.json
+++ b/uknown_luqvkx.t1_scrape.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_luqvkx.t1_scrape",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_luqvkx.t1_scrape",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531582769,
-	"last_scraped": 1571556638498,
+	"last_scraped": 1571559113224,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531582769
 		}
 	],
-	"updt": 1571554493548,
-	"edit": 8,
-	"scrape_ct": 11,
-	"next_scrape": 1571556698498,
+	"updt": 1571556976414,
+	"edit": 9,
+	"scrape_ct": 9,
+	"next_scrape": 1571559173224,
 	"category": "coin_flipper",
-	"last_update": 1571556638498,
+	"last_update": 1571559113224,
 	"output": [
 		{
 			"args": {},
-			"calls": 63812,
+			"calls": 68649,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"he big",
