--- a/unknown_lq831w.manage.json
+++ b/unknown_lq831w.manage.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_lq831w.manage",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_lq831w.manage",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 1571558346804,
+	"last_scraped": 1571560731171,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
 		}
 	],
-	"updt": 1571556300121,
-	"edit": 9,
-	"scrape_ct": 4,
-	"next_scrape": 1571558406804,
+	"updt": 1571558552617,
+	"edit": 10,
+	"scrape_ct": 2,
+	"next_scrape": 1571560791171,
 	"category": "dice_roller",
-	"last_update": 1571558346804,
+	"last_update": 1571560731171,
 	"output": [
 		{
 			"args": {},
-			"calls": 75536,
+			"calls": 81490,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ff ou",
