--- a/unknown_ah0rz1.coil.json
+++ b/unknown_ah0rz1.coil.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_ah0rz1.coil",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_ah0rz1.coil",
 	"sector": "NGC_5505",
 	"sec_level": 4,
 	"date_added": 1571530516796,
-	"last_scraped": 1571561069661,
+	"last_scraped": 1571563199310,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571530516796
 		}
 	],
-	"updt": 1571558778386,
-	"edit": 10,
-	"scrape_ct": 2,
-	"next_scrape": 1571561129661,
+	"updt": 1571561257516,
+	"edit": 11,
+	"next_scrape": 1571607937302,
 	"category": "coin_flipper",
-	"last_update": 1571561069661,
+	"last_update": 1571563199310,
 	"output": [
 		{
 			"args": {},
-			"calls": 94156,
+			"calls": 107999,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ovide",
