--- a/uknown_lecrl6.heart.json
+++ b/uknown_lecrl6.heart.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_lecrl6.heart",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_lecrl6.heart",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 1571562778540,
+	"last_scraped": 1571564857956,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
 		}
 	],
-	"updt": 1571560806586,
-	"edit": 11,
-	"scrape_ct": 0,
-	"next_scrape": 1571562838540,
+	"updt": 1571562835138,
+	"edit": 12,
+	"next_scrape": 1571608095869,
 	"category": "coin_flipper",
-	"last_update": 1571562778540,
+	"last_update": 1571564857956,
 	"output": [
 		{
 			"args": {},
-			"calls": 96586,
+			"calls": 105823,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"tenti",
