--- a/uknown_vnbzxc.breach.json
+++ b/uknown_vnbzxc.breach.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_vnbzxc.breach",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_vnbzxc.breach",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 1571562417456,
+	"last_scraped": 1571564334959,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
 		}
 	],
-	"scrape_ct": 0,
-	"next_scrape": 1571562477456,
+	"next_scrape": 1571607160475,
 	"category": "dice_roller",
-	"last_update": 1571562417456,
+	"last_update": 1571564334959,
 	"output": [
 		{
 			"args": {},
-			"calls": 97424,
+			"calls": 106210,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"r cre",
@@ -61,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1571560357028,
-	"edit": 10
+	"updt": 1571562610250,
+	"edit": 11
 }
