--- a/uknown_ypla0j.paypal.json
+++ b/uknown_ypla0j.paypal.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ypla0j.paypal",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_ypla0j.paypal",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1565331884872,
-	"last_scraped": 1571562187049,
+	"last_scraped": 1571564186361,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,16 +22,16 @@
 		]
 	],
 	"pl_output": "`D:::PAYPAL ERROR:::` Please use pay.pal to access your account.",
-	"next_scrape": 1571562247049,
-	"updt": 1571560130224,
-	"edit": 1052,
-	"scrape_ct": 5,
+	"next_scrape": 1571564246361,
+	"updt": 1571562384163,
+	"edit": 1053,
+	"scrape_ct": 3,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1571562187049,
+	"last_update": 1571564186361,
 	"output": [
 		{
 			"args": {},
-			"calls": 81993,
+			"calls": 86585,
 			"base": "`D:::PAYPAL ERROR:::` Please use pay.pal to access your account.",
 			"fragments": [
 				"MFT0X",
