--- a/unknown_v19ae6.public.json
+++ b/unknown_v19ae6.public.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_v19ae6.public",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_v19ae6.public",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571524991550,
-	"last_scraped": 1571561843397,
+	"last_scraped": 1571563975298,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524991550
 		}
 	],
-	"updt": 1571559904641,
-	"edit": 11,
-	"scrape_ct": 2,
-	"next_scrape": 1571561903397,
+	"updt": 1571561934544,
+	"edit": 12,
+	"next_scrape": 1571607950979,
 	"category": "dice_roller",
-	"last_update": 1571561843397,
+	"last_update": 1571563975298,
 	"output": [
 		{
 			"args": {},
-			"calls": 88946,
+			"calls": 104243,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ow? E",
