--- a/unknown_yadysv.housekeeping_paypal.json
+++ b/unknown_yadysv.housekeeping_paypal.json
@@ -1,24 +1,23 @@
 {
 	"_id": "unknown_yadysv.housekeeping_paypal",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_yadysv.housekeeping_paypal",
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524437153,
-	"last_scraped": 1571563772035,
+	"last_scraped": 1571565894048,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524437153
 		}
 	],
-	"updt": 1571561934544,
-	"edit": 13,
-	"scrape_ct": 1,
-	"next_scrape": 1571563832035,
+	"updt": 1571563965172,
+	"edit": 14,
+	"next_scrape": 1571612587047,
 	"category": "plant_sim",
-	"last_update": 1571563772035,
+	"last_update": 1571565894048,
 	"output": [
 		{
 			"args": {},
@@ -50,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 10382,
+			"calls": 11387,
 			"base": "c:\"9ntpaz\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Á\n                 ",
 			"fragments": [
 				"o tak",
