--- a/uknown_wvp0h8.bot_scam_do_not_run.json
+++ b/uknown_wvp0h8.bot_scam_do_not_run.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_wvp0h8.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_wvp0h8.bot_scam_do_not_run",
 	"sector": "SPC_2020",
 	"sec_level": 4,
 	"date_added": 1571531077580,
-	"last_scraped": 1571565421076,
+	"last_scraped": 1571566979588,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531077580
 		}
 	],
-	"updt": 1571563513952,
-	"edit": 12,
-	"scrape_ct": 1,
-	"next_scrape": 1571565481076,
+	"updt": 1571565544995,
+	"edit": 13,
+	"next_scrape": 1571607930426,
 	"category": "coin_flipper",
-	"last_update": 1571565421076,
+	"last_update": 1571566979588,
 	"output": [
 		{
 			"args": {},
-			"calls": 85676,
+			"calls": 94825,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e, Ma",
