--- a/unknown_vl44gu.init.json
+++ b/unknown_vl44gu.init.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_vl44gu.init",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_vl44gu.init",
 	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1565331352350,
-	"last_scraped": 1571564868082,
+	"last_scraped": 1571566567119,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,16 +22,15 @@
 		]
 	],
 	"pl_output": "\n`B> Initiating Virtual Environment Container...`\n`c----------------------------------------------------------------`\n\n`bPROJECT BLACKFOX(c) 2055 Capital Acquisition Technologies, Inc.`\n`bDate 05/17/55 14:32:21 Ver 00.01.00`\n\n`B> Preparing BLACKFOX Environment...` `lOK`\n`B> Peforming VEC Security Self-Test...` `eFAILED`\n\n`B>` `eUSER IS NOT AUTHORISED.` `zLOCK_ERROR`\n`B>` `eSYSTEM WILL NOW HALT.`\n",
-	"next_scrape": 1571564928082,
-	"updt": 1571562835138,
-	"edit": 1484,
-	"scrape_ct": 1,
+	"next_scrape": 1571608064386,
+	"updt": 1571565318295,
+	"edit": 1485,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1571564868082,
+	"last_update": 1571566567119,
 	"output": [
 		{
 			"args": {},
-			"calls": 788659,
+			"calls": 854698,
 			"base": "\n`B> Initiating Virtual Environment Container...`\n`c----------------------------------------------------------------`\n\n`bPROJECT BLACKFOX(c) 2055 Capital Acquisition Technologies, Inc.`\n`bDate 05/17/55 14:32:21 Ver 00.01.00`\n\n`B> Preparing BLACKFOX Environment...` `lOK`\n`B> Peforming VEC Security Self-Test...` `eFAILED`\n\n`B>` `eUSER IS NOT AUTHORISED.` `zLOCK_ERROR`\n`B>` `eSYSTEM WILL NOW HALT.`\n",
 			"fragments": [
 				"t eve",
