--- a/unknown_fc9arx.scour.json
+++ b/unknown_fc9arx.scour.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_fc9arx.scour",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_fc9arx.scour",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 1571566063533,
+	"last_scraped": 1571567570435,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
 		}
 	],
-	"updt": 1571564188654,
-	"edit": 14,
-	"scrape_ct": 1,
-	"next_scrape": 1571566123533,
+	"updt": 1571566221304,
+	"edit": 15,
+	"next_scrape": 1571612249810,
 	"category": "plant_sim",
-	"last_update": 1571566063533,
+	"last_update": 1571567570435,
 	"output": [
 		{
 			"args": {},
-			"calls": 12366,
+			"calls": 13512,
 			"base": "c:\"v0wc4r\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"rly i",
