--- a/uknown_xf2dal.loc.json
+++ b/uknown_xf2dal.loc.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_xf2dal.loc",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_xf2dal.loc",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 1571567821835,
+	"last_scraped": 1571568877884,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
 		}
 	],
-	"scrape_ct": 0,
-	"next_scrape": 1571567881835,
+	"next_scrape": 1571615480545,
 	"category": "plant_sim",
-	"last_update": 1571567821835,
+	"last_update": 1571568877884,
 	"output": [
 		{
 			"args": {},
-			"calls": 12229,
+			"calls": 13310,
 			"base": "c:\"4ktela\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"s wel",
@@ -61,8 +60,8 @@
 			]
 		}
 	],
-	"updt": 1571566446659,
-	"edit": 14,
+	"updt": 1571568026661,
+	"edit": 15,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
