--- a/unknown_f43glc.db.json
+++ b/unknown_f43glc.db.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_f43glc.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_f43glc.db",
 	"sector": "NGC_9087",
 	"sec_level": 4,
 	"date_added": 1571532133068,
-	"last_scraped": 1571567219913,
+	"last_scraped": 1571568615668,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571532133068
 		}
 	],
-	"updt": 1571565995259,
-	"edit": 13,
-	"scrape_ct": 2,
-	"next_scrape": 1571567279913,
+	"updt": 1571567348845,
+	"edit": 14,
+	"next_scrape": 1571615164822,
 	"category": "dice_roller",
-	"last_update": 1571567219913,
+	"last_update": 1571568615668,
 	"output": [
 		{
 			"args": {},
-			"calls": 94525,
+			"calls": 105943,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"045 i",
