--- a/unknown_ythy5v.lib_db.json
+++ b/unknown_ythy5v.lib_db.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_ythy5v.lib_db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_ythy5v.lib_db",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531309105,
-	"last_scraped": 1571567098936,
+	"last_scraped": 1571568485038,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531309105
 		}
 	],
-	"updt": 1571565770983,
-	"edit": 13,
-	"scrape_ct": 0,
-	"next_scrape": 1571567158936,
+	"updt": 1571567123033,
+	"edit": 14,
+	"next_scrape": 1571609695888,
 	"category": "coin_flipper",
-	"last_update": 1571567098936,
+	"last_update": 1571568485038,
 	"output": [
 		{
 			"args": {},
-			"calls": 96740,
+			"calls": 104116,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"nt. i",
