--- a/uknown_56z58x.css.json
+++ b/uknown_56z58x.css.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_56z58x.css",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_56z58x.css",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531077580,
-	"last_scraped": 1571567020335,
+	"last_scraped": 1571568375737,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531077580
 		}
 	],
-	"updt": 1571565544995,
-	"edit": 13,
-	"scrape_ct": 1,
-	"next_scrape": 1571567080335,
+	"updt": 1571567123033,
+	"edit": 14,
+	"next_scrape": 1571615143748,
 	"category": "plant_sim",
-	"last_update": 1571567020335,
+	"last_update": 1571568375737,
 	"output": [
 		{
 			"args": {},
-			"calls": 11420,
+			"calls": 12627,
 			"base": "c:\"ip9w6z\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"n - I",
