--- a/unknown_opfa3d.fuckthisshitimout.json
+++ b/unknown_opfa3d.fuckthisshitimout.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_opfa3d.fuckthisshitimout",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_opfa3d.fuckthisshitimout",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 1571567832549,
+	"last_scraped": 1571568928342,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
 		}
 	],
-	"scrape_ct": 0,
-	"next_scrape": 1571567892549,
+	"next_scrape": 1571612520894,
 	"category": "dice_roller",
-	"last_update": 1571567832549,
+	"last_update": 1571568928342,
 	"output": [
 		{
 			"args": {},
-			"calls": 104437,
+			"calls": 113667,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"almost",
@@ -61,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1571566446659,
-	"edit": 13
+	"updt": 1571568026661,
+	"edit": 14
 }
