--- a/uknown_fqdxpv.bot_scam_do_not_run.json
+++ b/uknown_fqdxpv.bot_scam_do_not_run.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_fqdxpv.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_fqdxpv.bot_scam_do_not_run",
 	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1571529701042,
-	"last_scraped": 1571568165043,
+	"last_scraped": 1571569168458,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529701042
 		}
 	],
-	"updt": 1571566672194,
-	"edit": 14,
-	"scrape_ct": 0,
-	"next_scrape": 1571568225043,
+	"updt": 1571568251436,
+	"edit": 15,
+	"next_scrape": 1571610207155,
 	"category": "plant_sim",
-	"last_update": 1571568165043,
+	"last_update": 1571569168458,
 	"output": [
 		{
 			"args": {},
-			"calls": 11714,
+			"calls": 12292,
 			"base": "c:\"2t522t\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"nctio",
