--- a/uknown_ilsh9q.public.json
+++ b/uknown_ilsh9q.public.json
@@ -1,24 +1,23 @@
 {
 	"_id": "uknown_ilsh9q.public",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_ilsh9q.public",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527118659,
-	"last_scraped": 1571568827430,
+	"last_scraped": 1571569489862,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527118659
 		}
 	],
-	"updt": 1571568026661,
-	"edit": 15,
-	"scrape_ct": 0,
-	"next_scrape": 1571568887430,
+	"updt": 1571568929415,
+	"edit": 16,
+	"next_scrape": 1571609680718,
 	"category": "plant_sim",
-	"last_update": 1571568827430,
+	"last_update": 1571569489862,
 	"output": [
 		{
 			"args": {},
@@ -221,7 +220,7 @@
 		},
 		{
 			"args": {},
-			"calls": 12132,
+			"calls": 13415,
 			"base": "c:\"37x34q\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Á\n                 ",
 			"fragments": [
 				"case,",
