--- a/uknown_t58dw4.bot_scam_do_not_run.json
+++ b/uknown_t58dw4.bot_scam_do_not_run.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_t58dw4.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_t58dw4.bot_scam_do_not_run",
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1571568536182,
+	"last_scraped": 1571569299277,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1571567348845,
-	"edit": 15,
-	"scrape_ct": 0,
-	"next_scrape": 1571568596182,
+	"updt": 1571568704612,
+	"edit": 16,
+	"next_scrape": 1571611767760,
 	"category": "plant_sim",
-	"last_update": 1571568536182,
+	"last_update": 1571569299277,
 	"output": [
 		{
 			"args": {},
-			"calls": 11532,
+			"calls": 12542,
 			"base": "c:\"9wm362\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"on, Mal",
