--- a/uknown_tuh6rk.t2_scrape.json
+++ b/uknown_tuh6rk.t2_scrape.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_tuh6rk.t2_scrape",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_tuh6rk.t2_scrape",
 	"sector": "NGC_9087",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1571568565388,
+	"last_scraped": 1571569358923,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1571567348845,
-	"edit": 14,
-	"scrape_ct": 2,
-	"next_scrape": 1571568625388,
+	"updt": 1571568704612,
+	"edit": 15,
+	"next_scrape": 1571611939715,
 	"category": "plant_sim",
-	"last_update": 1571568565388,
+	"last_update": 1571569358923,
 	"output": [
 		{
 			"args": {},
-			"calls": 10993,
+			"calls": 12354,
 			"base": "c:\"3dc8rg\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				" I wo",
