--- a/unknown_0axb7v.loic.json
+++ b/unknown_0axb7v.loic.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_0axb7v.loic",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_0axb7v.loic",
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1571568547023,
+	"last_scraped": 1571569730691,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1571567348845,
-	"edit": 15,
-	"scrape_ct": 2,
-	"next_scrape": 1571568607023,
+	"updt": 1571569380758,
+	"edit": 17,
+	"next_scrape": 1571610786608,
 	"category": "plant_sim",
-	"last_update": 1571568547023,
+	"last_update": 1571569730691,
 	"output": [
 		{
 			"args": {},
-			"calls": 10992,
+			"calls": 12778,
 			"base": "c:\"j04yl2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ty in",
