--- a/unknown_43cjrs.db.json
+++ b/unknown_43cjrs.db.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_43cjrs.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_43cjrs.db",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 1571569079940,
+	"last_scraped": 1571569853015,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
 		}
 	],
-	"updt": 1571568251436,
-	"edit": 15,
-	"scrape_ct": 1,
-	"next_scrape": 1571569139940,
+	"updt": 1571569606292,
+	"edit": 17,
+	"next_scrape": 1571612134929,
 	"category": "coin_flipper",
-	"last_update": 1571569079940,
+	"last_update": 1571569853015,
 	"output": [
 		{
 			"args": {},
-			"calls": 97870,
+			"calls": 114937,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"was i",
