--- a/unknown_9v29je.t3brute.json
+++ b/unknown_9v29je.t3brute.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_9v29je.t3brute",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_9v29je.t3brute",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531309105,
-	"last_scraped": 1571568475163,
+	"last_scraped": 1571569640862,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531309105
 		}
 	],
-	"updt": 1571567123033,
-	"edit": 14,
-	"scrape_ct": 1,
-	"next_scrape": 1571568535163,
+	"updt": 1571569380758,
+	"edit": 16,
+	"next_scrape": 1571614528622,
 	"category": "dice_roller",
-	"last_update": 1571568475163,
+	"last_update": 1571569640862,
 	"output": [
 		{
 			"args": {},
-			"calls": 95470,
+			"calls": 104535,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"20CC t",
