--- a/unknown_gy05s0.report.json
+++ b/unknown_gy05s0.report.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_gy05s0.report",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_gy05s0.report",
 	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1571529935529,
-	"last_scraped": 1571568183823,
+	"last_scraped": 1571569178352,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529935529
 		}
 	],
-	"updt": 1571566897504,
-	"edit": 14,
-	"scrape_ct": 0,
-	"next_scrape": 1571568243823,
+	"updt": 1571568251436,
+	"edit": 15,
+	"next_scrape": 1571615109362,
 	"category": "plant_sim",
-	"last_update": 1571568183823,
+	"last_update": 1571569178352,
 	"output": [
 		{
 			"args": {},
-			"calls": 11951,
+			"calls": 12472,
 			"base": "c:\"w20wh3\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"awaki",
