--- a/unknown_m0d1ti.tickets.json
+++ b/unknown_m0d1ti.tickets.json
@@ -1,24 +1,23 @@
 {
 	"_id": "unknown_m0d1ti.tickets",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_m0d1ti.tickets",
 	"sector": "HJG_6981",
 	"sec_level": 4,
 	"date_added": 1571528416362,
-	"last_scraped": 1571569049521,
+	"last_scraped": 1571569560998,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571528416362
 		}
 	],
-	"updt": 1571568026661,
-	"edit": 15,
-	"scrape_ct": 2,
-	"next_scrape": 1571569109521,
+	"updt": 1571569154149,
+	"edit": 16,
+	"next_scrape": 1571609782065,
 	"category": "plant_sim",
-	"last_update": 1571569049521,
+	"last_update": 1571569560998,
 	"output": [
 		{
 			"args": {},
@@ -52,7 +51,7 @@
 		},
 		{
 			"args": {},
-			"calls": 11055,
+			"calls": 12485,
 			"base": "c:\"cgog2n\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Á\n                 ",
 			"fragments": [
 				"incre",
