--- a/unknown_s76pj4.bot_scam_do_not_run.json
+++ b/unknown_s76pj4.bot_scam_do_not_run.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_s76pj4.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_s76pj4.bot_scam_do_not_run",
 	"sector": "HJG_6981",
 	"sec_level": 4,
 	"date_added": 1571527882218,
-	"last_scraped": 1571568956891,
+	"last_scraped": 1571569529544,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527882218
 		}
 	],
-	"updt": 1571568026661,
-	"edit": 15,
-	"scrape_ct": 0,
-	"next_scrape": 1571569016891,
+	"updt": 1571569154149,
+	"edit": 16,
+	"next_scrape": 1571615327858,
 	"category": "dice_roller",
-	"last_update": 1571568956891,
+	"last_update": 1571569529544,
 	"output": [
 		{
 			"args": {},
-			"calls": 103781,
+			"calls": 109358,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"rom d",
