--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_nd836z.logviewer",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_nd836z.logviewer",
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 1571568645587,
+	"last_scraped": 1571569389345,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
 		}
 	],
-	"updt": 1571567348845,
-	"edit": 15,
-	"scrape_ct": 0,
-	"next_scrape": 1571568705587,
+	"updt": 1571569380758,
+	"edit": 17,
+	"next_scrape": 1571615527075,
 	"category": "plant_sim",
-	"last_update": 1571568645587,
+	"last_update": 1571569389345,
 	"output": [
 		{
 			"args": {},
-			"calls": 12059,
+			"calls": 13433,
 			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"h you",
