--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -6,31 +6,39 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 1571569389345,
+	"last_scraped": 1571599151406,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
 		}
 	],
-	"updt": 1571569380758,
-	"edit": 17,
-	"next_scrape": 1571615527075,
+	"updt": 1571569606292,
+	"edit": 18,
+	"next_scrape": 1571642660248,
 	"category": "plant_sim",
-	"last_update": 1571569389345,
+	"last_update": 1571599151406,
 	"output": [
 		{
 			"args": {},
-			"calls": 13433,
+			"calls": 14999,
 			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"h you",
 				"s and ",
-				"ned co",
+				"et rea",
+				"eady t",
 				"ady to",
+				"ur assi",
 				"this lu",
+				"s lull ",
+				" your a",
 				"t ready ",
+				"ove - th",
+				"o move -",
 				"lull giv",
+				"his lull",
+				"gned cor",
 				" and get"
 			],
 			"hits": [
