--- a/unknown_vl44gu.init.json
+++ b/unknown_vl44gu.init.json
@@ -6,7 +6,7 @@
 	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1565331352350,
-	"last_scraped": 1571602125208,
+	"last_scraped": 1571605988976,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,15 +22,15 @@
 		]
 	],
 	"pl_output": "\n`B> Initiating Virtual Environment Container...`\n`c----------------------------------------------------------------`\n\n`bPROJECT BLACKFOX(c) 2055 Capital Acquisition Technologies, Inc.`\n`bDate 05/17/55 14:32:21 Ver 00.01.00`\n\n`B> Preparing BLACKFOX Environment...` `lOK`\n`B> Peforming VEC Security Self-Test...` `eFAILED`\n\n`B>` `eUSER IS NOT AUTHORISED.` `zLOCK_ERROR`\n`B>` `eSYSTEM WILL NOW HALT.`\n",
-	"next_scrape": 1571645904526,
-	"updt": 1571598416891,
-	"edit": 1487,
+	"next_scrape": 1571647562739,
+	"updt": 1571602250045,
+	"edit": 1488,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1571602125208,
+	"last_update": 1571605988976,
 	"output": [
 		{
 			"args": {},
-			"calls": 966955,
+			"calls": 1017950,
 			"base": "\n`B> Initiating Virtual Environment Container...`\n`c----------------------------------------------------------------`\n\n`bPROJECT BLACKFOX(c) 2055 Capital Acquisition Technologies, Inc.`\n`bDate 05/17/55 14:32:21 Ver 00.01.00`\n\n`B> Preparing BLACKFOX Environment...` `lOK`\n`B> Peforming VEC Security Self-Test...` `eFAILED`\n\n`B>` `eUSER IS NOT AUTHORISED.` `zLOCK_ERROR`\n`B>` `eSYSTEM WILL NOW HALT.`\n",
 			"fragments": [
 				"t eve",
